SAK-4565: Fixes scrolling. Unfortunately hit issue with new stylesheet and had to make sure anchors are aligned to the top of the box/line they area member of.
git-svn-id: https://source.sakaiproject.org/svn/rwiki/trunk@9167 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/rwiki/rwiki-tool/tool/src/webapp/styles/wikiStyle.css
+++ b/rwiki/rwiki-tool/tool/src/webapp/styles/wikiStyle.css
@@ -22,6 +22,10 @@
   width: 100%;
 }
 
+a.anchorpoint {
+  vertical-align: top;
+}
+
 .publicview {
   padding: 10px 10px 10px 30px;
 }
